# manuscript_pipeline

./: .gitignore  CHANGELOG.md  README.md  pipeline.py  protocol.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_protocol.py
