[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manuscript-pipeline"
version = "0.1.0"
description = "Orchestrator for ai_style_checker + sentence_evolver + publishing_engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kyeong Sun Kim", email = "ksk5429@users.noreply.github.com" },
]
keywords = [
    "academic-writing",
    "manuscript",
    "pipeline",
    "publishing",
    "ai-detection",
    "style-checker",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/ksk5429/manuscript_pipeline"
Repository = "https://github.com/ksk5429/manuscript_pipeline"

[project.scripts]
manuscript-pipeline = "pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
